--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-scr/__pycache__/auslesen.cpython-39.pyc
-scr/__pycache__/preisauskunft.cpython-39.pyc
-scr/__pycache__/scammer.cpython-39.pyc
-scr/__pycache__/scammpreiskombi.cpython-39.pyc
+scr/__pycache__
+tests/
